clean api/route/controllers/response - swagger wip
